removed hgra requests, added emojis

--- a/Discord_server_notes.mkd
+++ b/Discord_server_notes.mkd
@@ -63,6 +63,10 @@
 
 * memes
   * veemo but it's deemo
+  * skill issue
+  * 727
 * country flags
 * letters
+  * maybe fonts/assets from rhythm game results screens?
 * emotions
+ * rip fc
