--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -1,3 +1,5 @@
+# Got an artist you want Rinny to cover? Double check that it's not already on the list~
+## each name is also a link to their music, so feel free to browse and discover new jams
 * [Kobaryo](https://open.spotify.com/artist/1Y81Ch90opScfpMfN17lZb?si=0ccf19138e1c4627)
 * [USAO](https://open.spotify.com/artist/25iPl8VJFDu38JMFF6uMXI?si=396ed66bf7a146a8)
 * [Quick Brown Fox](https://open.spotify.com/artist/5dp0fbyRSD22XTvsdeLeaY?si=6ce8025cf3cb445e)
