added hino isuka, Umeboshi chazuke

--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -55,3 +55,5 @@
 * [Massive New Krew](https://open.spotify.com/artist/1D3hV1Gke8LLRSn1aymglN?si=c17dfe54a0b446b4)
 * ARM
 * [Lite Show Magic](https://open.spotify.com/artist/7hlPJUqB3Wkpr5WLHLC573?si=14a0fc4d751f47e3)
+* [hino isuka](https://open.spotify.com/artist/1lnzTELNsWBahibN86sSU4?si=0437af3ed63a4f94)
+* [Umeboshi chazuke](https://open.spotify.com/artist/73m2j87v34bHHXTu55XatF?si=1523b3507c944f45)
