added recs from MLZR
https://canary.discord.com/channels/879470867137048616/904507032470708305/908778835393282098
https://canary.discord.com/channels/879470867137048616/904507032470708305/908779406867202099

--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -8,6 +8,8 @@
 * [BlackY](https://open.spotify.com/artist/4IsgVdOy2TTOTPArjMzDNp?si=e5e602de051940af)
 * [C-Show](https://open.spotify.com/artist/1htzq7aFGxiKmAwVSmk4yx?si=2ff1e7008c374473)
 * [Chroma / 黒魔/](https://open.spotify.com/artist/2Gtmf2gf0Rs6NN2RTld3O2?si=e9d910e4ea6a4e54)
+* [COSIO](https://open.spotify.com/artist/0FEE6TY5DhlkJ8Bsp2Xu5T?si=4f21715a4c0d4a98)
+* [DECO*27](https://open.spotify.com/artist/7kZTWx6cRLc0TSRPq1XBMP?si=601a8e5b732d4346)
 * [DJ Genki](https://open.spotify.com/artist/787mj6iFvEpBBuQQRDdMXB?si=534450fc5f2141be)
 * [DJ YOSHITAKA](https://open.spotify.com/artist/7MrwZGvkQjFALsvKQyBbli?si=9a64c3770bdd4c42)
 * [DJ sharpnel](https://open.spotify.com/artist/0qZjgKADg863aWQZxRppgK?si=eZmwhxuJRFGNnFASTfd-Tw)
@@ -27,6 +29,7 @@
 * [Laur](https://open.spotify.com/artist/5fxJUmn4RTMzD0XPkTUpK3?si=f5a07b81face4192)
 * [Lite Show Magic](https://open.spotify.com/artist/7hlPJUqB3Wkpr5WLHLC573?si=14a0fc4d751f47e3)
 * [M2U](https://open.spotify.com/artist/2wTNs9AmIOv5Fjs66HK1tV?si=711d0c01e9e34136)
+* [MASAKI](
 * [Massive New Krew](https://open.spotify.com/artist/1D3hV1Gke8LLRSn1aymglN?si=c17dfe54a0b446b4)
 * [Moe shop](https://open.spotify.com/artist/7cvljqLNhWNFMb8wP2NImJ?si=9441fdb5ca334a31)
 * [Morimori Atushi](https://open.spotify.com/artist/3EhfoUSyEJ3yEVzSU7LBNe?si=824100d1dc8d449e)
@@ -42,6 +45,7 @@
 * [Ryo(supercell)](https://open.spotify.com/artist/5Ud2lekREUXjinNlIGjJIX?si=e02f33a90a9c40d3)
 * [Ryu☆](https://open.spotify.com/artist/4gDlrL7n3hUaweCjBwVSzj?si=4hr_Mj8dT-2ohsnLYFjn4Q)
 * [S3RL](https://open.spotify.com/artist/11aa081aKYUzmeFm0yHdT2?si=968474d94bbd4221)
+* [SASAKURE.uk](https://open.spotify.com/artist/6nqR1MdjPNXu5KSdeqJBI1?si=499b83713b424018)
 * [SOOOO](https://open.spotify.com/artist/59TISvIGG8NmedxlcEYSWu?si=5a28f2f79a3e4a73)
 * [Silentroom](https://open.spotify.com/artist/7LLBCtTpnXXkY6AvW0Qjy9?si=076ab01ab3ba42c8)
 * [Sota Fujimori](https://open.spotify.com/artist/0IhucRUI5QnAsHmw3G9I9v?si=5397224a698948d6)
@@ -58,9 +62,10 @@
 * [cosMo@Bousou-P](https://open.spotify.com/artist/0Z0BaBPSkr05iFPTrZmJiK?si=513834da343a4008)
 * [ebimayo](https://open.spotify.com/artist/2ndMGABYRfVaeWkDP5Ag6v?si=24b76c8015e94bc5)
 * [hino isuka](https://open.spotify.com/artist/1lnzTELNsWBahibN86sSU4?si=0437af3ed63a4f94)
-* [imperial circus dead decadence](https://open.spotify.com/artist/5bgW1AysTzHav20snaPkyp?si=8108bdcabcb84d58)
+* [Imperial Circus Dead Decadence](https://open.spotify.com/artist/5bgW1AysTzHav20snaPkyp?si=8108bdcabcb84d58)
 * [kors k](https://open.spotify.com/artist/667AP6niAXUnJkkum46TvZ?si=08332aa5674e4aa8)
 * [m1dlet](https://open.spotify.com/artist/1YGGaZxHAKqyI1Knqq5mFQ?si=8cef5a281f864bb6)
 * [nora2r](https://open.spotify.com/artist/2w6fOiIppkVrA659vJN89h?si=6838076a37eb42b9)
 * [tatsh](https://open.spotify.com/artist/3qQ77y3zH3qIjq38LfxQ8c?si=poUdyHBmTqiEctq4SOzKvA)
 * [Yooh](https://open.spotify.com/artist/1M3Nrg5KLgJTxCbwQYl0sG?si=77f29da0eeb642e4)
+* [ZUNTATA](https://open.spotify.com/artist/78dDLIBQRjfGrwWHPzyGvk?si=09652e6e1f59418d)
