--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -11,14 +11,16 @@
 * [COSIO](https://open.spotify.com/artist/0FEE6TY5DhlkJ8Bsp2Xu5T?si=4f21715a4c0d4a98)
 * [DECO*27](https://open.spotify.com/artist/7kZTWx6cRLc0TSRPq1XBMP?si=601a8e5b732d4346)
 * [DJ Genki](https://open.spotify.com/artist/787mj6iFvEpBBuQQRDdMXB?si=534450fc5f2141be)
-* [DJ YOSHITAKA](https://open.spotify.com/artist/7MrwZGvkQjFALsvKQyBbli?si=9a64c3770bdd4c42)
+* [DJ Kurara](https://open.spotify.com/artist/4Ld4okb6IAQawA81RHkM3U?si=c0833dcbe0c541ce)
+* [DJ Myosuke](https://open.spotify.com/artist/0GsEX8wr2fhu19PIwQh1oG?si=c63db4254d1e4cde)
 * [DJ sharpnel](https://open.spotify.com/artist/0qZjgKADg863aWQZxRppgK?si=eZmwhxuJRFGNnFASTfd-Tw)
-* [DJKurara](https://open.spotify.com/artist/4Ld4okb6IAQawA81RHkM3U?si=c0833dcbe0c541ce)
+* [DJ YOSHITAKA](https://open.spotify.com/artist/7MrwZGvkQjFALsvKQyBbli?si=9a64c3770bdd4c42)
 * [DOT96](https://open.spotify.com/artist/73ccn62z0PaLuutw25Au8o?si=3b8be343ea434f62)
 * [De De Mouse](https://open.spotify.com/artist/1mZtAFuxFAgqmTCqfKLWoj?si=953bccc7b348456c)
 * [Diabarha](https://www.youtube.com/channel/UCksq7I8QduPMyaLkIhsAz8w)
 * [FREEZER](https://open.spotify.com/artist/67BCC33Zamb5TdL6di2xi1?si=0547e930d8264e8d)
 * [Foreground Eclipse](https://www.youtube.com/watch?v=AeZb5ufTuCM)
+* [Getty](https://open.spotify.com/artist/3CKAJHc0KjoFAbaqvvJ5kK?si=59a837b632ef4f6d)
 * [Ginkiha](https://open.spotify.com/artist/0Vqx5xQshGuOoA9JAYDhF2?si=888030bbf1e9462d)
 * [Goreshit](https://open.spotify.com/artist/2UyOnfaE8nWXKPwYQyp2La?si=6e09afbac3d04901)
 * [Halozy](https://halozy.bandcamp.com/)
@@ -40,6 +42,7 @@
 * PON
 * [PSYQUI](https://open.spotify.com/artist/3p8H8HTn04KXh2NRzhKScl?si=5c1b517617cf45a4)
 * [Quick Brown Fox](https://open.spotify.com/artist/5dp0fbyRSD22XTvsdeLeaY?si=6ce8025cf3cb445e)
+* [REDALiCE](https://open.spotify.com/artist/3m63JSv6jhLEKNXcEd5EUK?si=83ea8615f93d47df)
 * [Reol](https://open.spotify.com/artist/7rpKUJ0AnklJ8q9nIPVSpZ?si=f8bfc9ed646c4afc)
 * [RoughSketch](https://open.spotify.com/artist/0lYM4mCc6IhbmfGYpeNCyO?si=622640ed239d44d5)
 * [Ryo(supercell)](https://open.spotify.com/artist/5Ud2lekREUXjinNlIGjJIX?si=e02f33a90a9c40d3)
@@ -49,6 +52,7 @@
 * [SOOOO](https://open.spotify.com/artist/59TISvIGG8NmedxlcEYSWu?si=5a28f2f79a3e4a73)
 * [Silentroom](https://open.spotify.com/artist/7LLBCtTpnXXkY6AvW0Qjy9?si=076ab01ab3ba42c8)
 * [Sota Fujimori](https://open.spotify.com/artist/0IhucRUI5QnAsHmw3G9I9v?si=5397224a698948d6)
+* [Srav3R](https://open.spotify.com/artist/5doDHBkL33VHZXcqAuQBj0?si=fc0fb5fabfef4657)
 * TAG
 * [TANUKI](https://open.spotify.com/artist/5n3X0T0RlvRxUR6l9dBwB8?si=485a6ee8e8814976) eristocrates here, my bias compells me to suggest his [old jcore remix album](https://tanukimusic.bandcamp.com/album/old-j-core-remixes-10-14), it's so fucking good
 * [TORIENA](https://open.spotify.com/artist/569Tg9s0Rv7EpI7zufTs2i?si=25d36ee2030c41dc)
