added witch's slave
https://canary.discord.com/channels/879470867137048616/904507032470708305/909405745089482802

--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -70,5 +70,6 @@
 * [m1dlet](https://open.spotify.com/artist/1YGGaZxHAKqyI1Knqq5mFQ?si=8cef5a281f864bb6)
 * [nora2r](https://open.spotify.com/artist/2w6fOiIppkVrA659vJN89h?si=6838076a37eb42b9)
 * [tatsh](https://open.spotify.com/artist/3qQ77y3zH3qIjq38LfxQ8c?si=poUdyHBmTqiEctq4SOzKvA)
+* [witch's slave](https://open.spotify.com/artist/6f1BHHPw92Pvr0N4tviEMT?si=c89b6d0418b740bf)
 * [Yooh](https://open.spotify.com/artist/1M3Nrg5KLgJTxCbwQYl0sG?si=77f29da0eeb642e4)
 * [ZUNTATA](https://open.spotify.com/artist/78dDLIBQRjfGrwWHPzyGvk?si=09652e6e1f59418d)
