added Dotz0cat recs
https://canary.discord.com/channels/879470867137048616/904507032470708305/910392166298320916

--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -36,6 +36,7 @@
 * [Morimori Atushi](https://open.spotify.com/artist/3EhfoUSyEJ3yEVzSU7LBNe?si=824100d1dc8d449e)
 * [Myosuke](https://open.spotify.com/artist/0GsEX8wr2fhu19PIwQh1oG?si=9431244a392446c5)
 * [Naoyuki Sato  (猫叉Master)](https://remywiki.com/Naoyuki_Sato)
+* [Neko Hacker](https://open.spotify.com/artist/2aQ9IoRPwXEhhBVj4wbS46?si=d6dc0675b3204162)
 * [owl*tree](https://open.spotify.com/artist/3Mws7pLUcCq69go78heq9p?si=b534a899be7d434c)
 * [P*Light](https://open.spotify.com/artist/7A5iW5McqgmSz4uV12zw5J?si=efdde292919f4dfa)
 * PON
@@ -71,5 +72,7 @@
 * [nora2r](https://open.spotify.com/artist/2w6fOiIppkVrA659vJN89h?si=6838076a37eb42b9)
 * [tatsh](https://open.spotify.com/artist/3qQ77y3zH3qIjq38LfxQ8c?si=poUdyHBmTqiEctq4SOzKvA)
 * [witch's slave](https://open.spotify.com/artist/6f1BHHPw92Pvr0N4tviEMT?si=c89b6d0418b740bf)
+* [YUC'e](https://open.spotify.com/artist/0jP8a2o9Mw5qYoUz1SnQ2A?si=2bf0141b255e48b2)
 * [Yooh](https://open.spotify.com/artist/1M3Nrg5KLgJTxCbwQYl0sG?si=77f29da0eeb642e4)
+* [Yunomi](https://open.spotify.com/artist/2j00CVYTPx6q9ANbmB2keb?si=4dd1216de9da4a55)
 * [ZUNTATA](https://open.spotify.com/artist/78dDLIBQRjfGrwWHPzyGvk?si=09652e6e1f59418d)
