added ETIA & Nanawoakari
https://canary.discord.com/channels/879470867137048616/904507032470708305/910488896742260767
https://canary.discord.com/channels/879470867137048616/904507032470708305/910538047299399710

--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -18,6 +18,7 @@
 * [DOT96](https://open.spotify.com/artist/73ccn62z0PaLuutw25Au8o?si=3b8be343ea434f62)
 * [De De Mouse](https://open.spotify.com/artist/1mZtAFuxFAgqmTCqfKLWoj?si=953bccc7b348456c)
 * [Diabarha](https://www.youtube.com/channel/UCksq7I8QduPMyaLkIhsAz8w)
+* [ETIA.](https://open.spotify.com/artist/1w4UT8aBCBdpxSRoxvyQ8u?si=d4d4057f040942aa)
 * [FREEZER](https://open.spotify.com/artist/67BCC33Zamb5TdL6di2xi1?si=0547e930d8264e8d)
 * [Foreground Eclipse](https://www.youtube.com/watch?v=AeZb5ufTuCM)
 * [Getty](https://open.spotify.com/artist/3CKAJHc0KjoFAbaqvvJ5kK?si=59a837b632ef4f6d)
@@ -35,6 +36,7 @@
 * [Moe shop](https://open.spotify.com/artist/7cvljqLNhWNFMb8wP2NImJ?si=9441fdb5ca334a31)
 * [Morimori Atushi](https://open.spotify.com/artist/3EhfoUSyEJ3yEVzSU7LBNe?si=824100d1dc8d449e)
 * [Myosuke](https://open.spotify.com/artist/0GsEX8wr2fhu19PIwQh1oG?si=9431244a392446c5)
+* [Nanawoakari](https://open.spotify.com/artist/06jSjpC81wzjoUoE61Fhdn?si=eda0c00ffce24608)
 * [Naoyuki Sato  (猫叉Master)](https://remywiki.com/Naoyuki_Sato)
 * [Neko Hacker](https://open.spotify.com/artist/2aQ9IoRPwXEhhBVj4wbS46?si=d6dc0675b3204162)
 * [owl*tree](https://open.spotify.com/artist/3Mws7pLUcCq69go78heq9p?si=b534a899be7d434c)
