added Dotz0cat recs
https://canary.discord.com/channels/879470867137048616/904507032470708305/910576330905641100
https://canary.discord.com/channels/879470867137048616/904507032470708305/910651579227602974

--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -2,6 +2,8 @@
 ### each name is also a link to their music, so feel free to click around and discover new jams
 
 * [aaaa / ああああ](https://open.spotify.com/artist/54XLXnnCDMzhExXXXKWNib?si=c01d2dff23ef4b66)
+* [Aiobahn](https://open.spotify.com/artist/3AMFQZ3Tt549kShRG2IBYT?si=353005accf27442b)
+* [Antenna Girl](https://open.spotify.com/artist/36ChDjtYousECVnTj0ntdj?si=885050507f1742f8)
 * [Aoi](https://open.spotify.com/artist/1y2oGiyZOz7JX1aEGGsYay?si=fGYIOS03R-CahTfYHVmP1w)
 * [AOiRO_Manbow aka HAPI](https://www.youtube.com/channel/UCTPCEd69AgcOaQ5N11v2zVA)
 * ARM
@@ -19,6 +21,7 @@
 * [De De Mouse](https://open.spotify.com/artist/1mZtAFuxFAgqmTCqfKLWoj?si=953bccc7b348456c)
 * [Diabarha](https://www.youtube.com/channel/UCksq7I8QduPMyaLkIhsAz8w)
 * [ETIA.](https://open.spotify.com/artist/1w4UT8aBCBdpxSRoxvyQ8u?si=d4d4057f040942aa)
+* [eve](https://open.spotify.com/artist/58oPVy7oihAEXE0Ott6JOf?si=MKOs2snxQdCFsvnxEzw8xg)
 * [FREEZER](https://open.spotify.com/artist/67BCC33Zamb5TdL6di2xi1?si=0547e930d8264e8d)
 * [Foreground Eclipse](https://www.youtube.com/watch?v=AeZb5ufTuCM)
 * [Getty](https://open.spotify.com/artist/3CKAJHc0KjoFAbaqvvJ5kK?si=59a837b632ef4f6d)
@@ -56,6 +59,7 @@
 * [Sota Fujimori](https://open.spotify.com/artist/0IhucRUI5QnAsHmw3G9I9v?si=5397224a698948d6)
 * [Srav3R](https://open.spotify.com/artist/5doDHBkL33VHZXcqAuQBj0?si=fc0fb5fabfef4657)
 * TAG
+* [Takeaki Wada](https://open.spotify.com/artist/1KrYz7M24ir3cJGcDYMyyu?si=7b79286ea4f84172) | [KurageP](https://open.spotify.com/artist/1GxBZsRNgsxf88VxjAVuKU?si=416944186fde4824)
 * [TANUKI](https://open.spotify.com/artist/5n3X0T0RlvRxUR6l9dBwB8?si=485a6ee8e8814976) eristocrates here, my bias compells me to suggest his [old jcore remix album](https://tanukimusic.bandcamp.com/album/old-j-core-remixes-10-14), it's so fucking good
 * [TORIENA](https://open.spotify.com/artist/569Tg9s0Rv7EpI7zufTs2i?si=25d36ee2030c41dc)
 * [Team Grimoire](https://open.spotify.com/artist/3JL2xJoZQDP7NjNiEmVpfa?si=1a3f867513644b1a)
