added hvno recs
https://canary.discord.com/channels/879470867137048616/904507032470708305/910896108430065695
https://canary.discord.com/channels/879470867137048616/904507032470708305/910896241997672458

--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -12,6 +12,7 @@
 * [Chroma / 黒魔/](https://open.spotify.com/artist/2Gtmf2gf0Rs6NN2RTld3O2?si=e9d910e4ea6a4e54)
 * [COSIO](https://open.spotify.com/artist/0FEE6TY5DhlkJ8Bsp2Xu5T?si=4f21715a4c0d4a98)
 * [DECO*27](https://open.spotify.com/artist/7kZTWx6cRLc0TSRPq1XBMP?si=601a8e5b732d4346)
+* [Diao ye zong / 凋叶棕](https://open.spotify.com/artist/1eavaF4JYVytwilMtljNhO?si=b3dc96539d904239)
 * [DJ Genki](https://open.spotify.com/artist/787mj6iFvEpBBuQQRDdMXB?si=534450fc5f2141be)
 * [DJ Kurara](https://open.spotify.com/artist/4Ld4okb6IAQawA81RHkM3U?si=c0833dcbe0c541ce)
 * [DJ Myosuke](https://open.spotify.com/artist/0GsEX8wr2fhu19PIwQh1oG?si=c63db4254d1e4cde)
@@ -49,6 +50,7 @@
 * [Quick Brown Fox](https://open.spotify.com/artist/5dp0fbyRSD22XTvsdeLeaY?si=6ce8025cf3cb445e)
 * [REDALiCE](https://open.spotify.com/artist/3m63JSv6jhLEKNXcEd5EUK?si=83ea8615f93d47df)
 * [Reol](https://open.spotify.com/artist/7rpKUJ0AnklJ8q9nIPVSpZ?si=f8bfc9ed646c4afc)
+* [RD-Sounds](https://open.spotify.com/artist/1Y4p4gln4fqE3LKdkzOz0f?si=6b5ffe6e98774967)
 * [RoughSketch](https://open.spotify.com/artist/0lYM4mCc6IhbmfGYpeNCyO?si=622640ed239d44d5)
 * [Ryo(supercell)](https://open.spotify.com/artist/5Ud2lekREUXjinNlIGjJIX?si=e02f33a90a9c40d3)
 * [Ryu☆](https://open.spotify.com/artist/4gDlrL7n3hUaweCjBwVSzj?si=4hr_Mj8dT-2ohsnLYFjn4Q)
@@ -59,6 +61,7 @@
 * [Sota Fujimori](https://open.spotify.com/artist/0IhucRUI5QnAsHmw3G9I9v?si=5397224a698948d6)
 * [Srav3R](https://open.spotify.com/artist/5doDHBkL33VHZXcqAuQBj0?si=fc0fb5fabfef4657)
 * TAG
+* [Taishi](https://open.spotify.com/artist/5cv7w3Fjid2lE7Srf7b2hT?si=b14eb2518d9240d0)
 * [Takeaki Wada](https://open.spotify.com/artist/1KrYz7M24ir3cJGcDYMyyu?si=7b79286ea4f84172) | [KurageP](https://open.spotify.com/artist/1GxBZsRNgsxf88VxjAVuKU?si=416944186fde4824)
 * [TANUKI](https://open.spotify.com/artist/5n3X0T0RlvRxUR6l9dBwB8?si=485a6ee8e8814976) eristocrates here, my bias compells me to suggest his [old jcore remix album](https://tanukimusic.bandcamp.com/album/old-j-core-remixes-10-14), it's so fucking good
 * [TORIENA](https://open.spotify.com/artist/569Tg9s0Rv7EpI7zufTs2i?si=25d36ee2030c41dc)
