--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -50,7 +50,7 @@
 * [Quick Brown Fox](https://open.spotify.com/artist/5dp0fbyRSD22XTvsdeLeaY?si=6ce8025cf3cb445e)
 * [REDALiCE](https://open.spotify.com/artist/3m63JSv6jhLEKNXcEd5EUK?si=83ea8615f93d47df)
 * [Reol](https://open.spotify.com/artist/7rpKUJ0AnklJ8q9nIPVSpZ?si=f8bfc9ed646c4afc)
-* [RD-Sounds](https://open.spotify.com/artist/1Y4p4gln4fqE3LKdkzOz0f?si=6b5ffe6e98774967)
+* [RD-Sounds](https://open.spotify.com/artist/1Y4p4gln4fqE3LKdkzOz0f?si=6b5ffe6e98774967) | [凋叶棕](https://open.spotify.com/artist/1eavaF4JYVytwilMtljNhO?si=ncQTjs8mRayHcvelzKNGGw)
 * [RoughSketch](https://open.spotify.com/artist/0lYM4mCc6IhbmfGYpeNCyO?si=622640ed239d44d5)
 * [Ryo(supercell)](https://open.spotify.com/artist/5Ud2lekREUXjinNlIGjJIX?si=e02f33a90a9c40d3)
 * [Ryu☆](https://open.spotify.com/artist/4gDlrL7n3hUaweCjBwVSzj?si=4hr_Mj8dT-2ohsnLYFjn4Q)
