--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -1,40 +1,47 @@
 # Got an artist you want Rinny to cover? Double check that it's not already on the list~
 ### each name is also a link to their music, so feel free to click around and discover new jams
 
-* [aaaa / ああああ](https://open.spotify.com/artist/54XLXnnCDMzhExXXXKWNib?si=c01d2dff23ef4b66)
+* [aaaa | ああああ](https://open.spotify.com/artist/54XLXnnCDMzhExXXXKWNib?si=c01d2dff23ef4b66)
 * [Aiobahn](https://open.spotify.com/artist/3AMFQZ3Tt549kShRG2IBYT?si=353005accf27442b)
 * [Antenna Girl](https://open.spotify.com/artist/36ChDjtYousECVnTj0ntdj?si=885050507f1742f8)
 * [Aoi](https://open.spotify.com/artist/1y2oGiyZOz7JX1aEGGsYay?si=fGYIOS03R-CahTfYHVmP1w)
 * [AOiRO_Manbow aka HAPI](https://www.youtube.com/channel/UCTPCEd69AgcOaQ5N11v2zVA)
-* ARM
+* [ARM
 * [BlackY](https://open.spotify.com/artist/4IsgVdOy2TTOTPArjMzDNp?si=e5e602de051940af)
 * [C-Show](https://open.spotify.com/artist/1htzq7aFGxiKmAwVSmk4yx?si=2ff1e7008c374473)
-* [Chroma / 黒魔/](https://open.spotify.com/artist/2Gtmf2gf0Rs6NN2RTld3O2?si=e9d910e4ea6a4e54)
+* [Chroma | 黒魔/](https://open.spotify.com/artist/2Gtmf2gf0Rs6NN2RTld3O2?si=e9d910e4ea6a4e54)
 * [COSIO](https://open.spotify.com/artist/0FEE6TY5DhlkJ8Bsp2Xu5T?si=4f21715a4c0d4a98)
+* [cosMo@Bousou-P](https://open.spotify.com/artist/0Z0BaBPSkr05iFPTrZmJiK?si=513834da343a4008)
+* [De De Mouse](https://open.spotify.com/artist/1mZtAFuxFAgqmTCqfKLWoj?si=953bccc7b348456c)
 * [DECO*27](https://open.spotify.com/artist/7kZTWx6cRLc0TSRPq1XBMP?si=601a8e5b732d4346)
-* [Diao ye zong / 凋叶棕](https://open.spotify.com/artist/1eavaF4JYVytwilMtljNhO?si=b3dc96539d904239)
+* [Diabarha](https://www.youtube.com/channel/UCksq7I8QduPMyaLkIhsAz8w)
+* [Diao ye zong | 凋叶棕](https://open.spotify.com/artist/1eavaF4JYVytwilMtljNhO?si=b3dc96539d904239)
 * [DJ Genki](https://open.spotify.com/artist/787mj6iFvEpBBuQQRDdMXB?si=534450fc5f2141be)
 * [DJ Kurara](https://open.spotify.com/artist/4Ld4okb6IAQawA81RHkM3U?si=c0833dcbe0c541ce)
 * [DJ Myosuke](https://open.spotify.com/artist/0GsEX8wr2fhu19PIwQh1oG?si=c63db4254d1e4cde)
 * [DJ sharpnel](https://open.spotify.com/artist/0qZjgKADg863aWQZxRppgK?si=eZmwhxuJRFGNnFASTfd-Tw)
 * [DJ YOSHITAKA](https://open.spotify.com/artist/7MrwZGvkQjFALsvKQyBbli?si=9a64c3770bdd4c42)
 * [DOT96](https://open.spotify.com/artist/73ccn62z0PaLuutw25Au8o?si=3b8be343ea434f62)
-* [De De Mouse](https://open.spotify.com/artist/1mZtAFuxFAgqmTCqfKLWoj?si=953bccc7b348456c)
-* [Diabarha](https://www.youtube.com/channel/UCksq7I8QduPMyaLkIhsAz8w)
+* [ebimayo](https://open.spotify.com/artist/2ndMGABYRfVaeWkDP5Ag6v?si=24b76c8015e94bc5)
 * [ETIA.](https://open.spotify.com/artist/1w4UT8aBCBdpxSRoxvyQ8u?si=d4d4057f040942aa)
 * [eve](https://open.spotify.com/artist/58oPVy7oihAEXE0Ott6JOf?si=MKOs2snxQdCFsvnxEzw8xg)
-* [FREEZER](https://open.spotify.com/artist/67BCC33Zamb5TdL6di2xi1?si=0547e930d8264e8d)
 * [Foreground Eclipse](https://www.youtube.com/watch?v=AeZb5ufTuCM)
+* [FREEZER](https://open.spotify.com/artist/67BCC33Zamb5TdL6di2xi1?si=0547e930d8264e8d)
 * [Getty](https://open.spotify.com/artist/3CKAJHc0KjoFAbaqvvJ5kK?si=59a837b632ef4f6d)
 * [Ginkiha](https://open.spotify.com/artist/0Vqx5xQshGuOoA9JAYDhF2?si=888030bbf1e9462d)
+* [gmtn.](https://open.spotify.com/artist/510FdyxWVl8Bw83dYoDsX6?si=WIKIcg7mTlCqzypV-malvQ) | witch's slave](https://open.spotify.com/artist/6f1BHHPw92Pvr0N4tviEMT?si=c89b6d0418b740bf)
 * [Goreshit](https://open.spotify.com/artist/2UyOnfaE8nWXKPwYQyp2La?si=6e09afbac3d04901)
 * [Halozy](https://halozy.bandcamp.com/)
+* [hino isuka](https://open.spotify.com/artist/1lnzTELNsWBahibN86sSU4?si=0437af3ed63a4f94)
+* [Imperial Circus Dead Decadence](https://open.spotify.com/artist/5bgW1AysTzHav20snaPkyp?si=8108bdcabcb84d58)
 * [IOSYS](https://open.spotify.com/artist/7lw3txgTpihF2On2QVtldq?si=40acaa5f88074f1a)
 * [Katagiri](https://open.spotify.com/artist/5duYVbF1t32VmVaI33fYAS?si=RvHPcqNpTFygvk0kxzqHlQ)
 * [Kobaryo](https://open.spotify.com/artist/1Y81Ch90opScfpMfN17lZb?si=0ccf19138e1c4627)
-* [Kurokotei / 黒皇帝](https://open.spotify.com/artist/3AjRXPf1FkulZmsWdOYBf5?si=05c12cd4a14b479f)
+* [kors k](https://open.spotify.com/artist/667AP6niAXUnJkkum46TvZ?si=08332aa5674e4aa8)
+* [Kurokotei | 黒皇帝](https://open.spotify.com/artist/3AjRXPf1FkulZmsWdOYBf5?si=05c12cd4a14b479f)
 * [Laur](https://open.spotify.com/artist/5fxJUmn4RTMzD0XPkTUpK3?si=f5a07b81face4192)
 * [Lite Show Magic](https://open.spotify.com/artist/7hlPJUqB3Wkpr5WLHLC573?si=14a0fc4d751f47e3)
+* [m1dlet](https://open.spotify.com/artist/1YGGaZxHAKqyI1Knqq5mFQ?si=8cef5a281f864bb6)
 * [M2U](https://open.spotify.com/artist/2wTNs9AmIOv5Fjs66HK1tV?si=711d0c01e9e34136)
 * [Massive New Krew](https://open.spotify.com/artist/1D3hV1Gke8LLRSn1aymglN?si=c17dfe54a0b446b4)
 * [Moe shop](https://open.spotify.com/artist/7cvljqLNhWNFMb8wP2NImJ?si=9441fdb5ca334a31)
@@ -43,45 +50,38 @@
 * [Nanawoakari](https://open.spotify.com/artist/06jSjpC81wzjoUoE61Fhdn?si=eda0c00ffce24608)
 * [Naoyuki Sato  (猫叉Master)](https://remywiki.com/Naoyuki_Sato)
 * [Neko Hacker](https://open.spotify.com/artist/2aQ9IoRPwXEhhBVj4wbS46?si=d6dc0675b3204162)
+* [nora2r](https://open.spotify.com/artist/2w6fOiIppkVrA659vJN89h?si=6838076a37eb42b9)
 * [owl*tree](https://open.spotify.com/artist/3Mws7pLUcCq69go78heq9p?si=b534a899be7d434c)
 * [P*Light](https://open.spotify.com/artist/7A5iW5McqgmSz4uV12zw5J?si=efdde292919f4dfa)
-* PON
+* [PON
 * [PSYQUI](https://open.spotify.com/artist/3p8H8HTn04KXh2NRzhKScl?si=5c1b517617cf45a4)
 * [Quick Brown Fox](https://open.spotify.com/artist/5dp0fbyRSD22XTvsdeLeaY?si=6ce8025cf3cb445e)
+* [RD-Sounds](https://open.spotify.com/artist/1Y4p4gln4fqE3LKdkzOz0f?si=6b5ffe6e98774967) | [凋叶棕](https://open.spotify.com/artist/1eavaF4JYVytwilMtljNhO?si=ncQTjs8mRayHcvelzKNGGw)
 * [REDALiCE](https://open.spotify.com/artist/3m63JSv6jhLEKNXcEd5EUK?si=83ea8615f93d47df)
 * [Reol](https://open.spotify.com/artist/7rpKUJ0AnklJ8q9nIPVSpZ?si=f8bfc9ed646c4afc)
-* [RD-Sounds](https://open.spotify.com/artist/1Y4p4gln4fqE3LKdkzOz0f?si=6b5ffe6e98774967) | [凋叶棕](https://open.spotify.com/artist/1eavaF4JYVytwilMtljNhO?si=ncQTjs8mRayHcvelzKNGGw)
 * [RoughSketch](https://open.spotify.com/artist/0lYM4mCc6IhbmfGYpeNCyO?si=622640ed239d44d5)
 * [Ryo(supercell)](https://open.spotify.com/artist/5Ud2lekREUXjinNlIGjJIX?si=e02f33a90a9c40d3)
 * [Ryu☆](https://open.spotify.com/artist/4gDlrL7n3hUaweCjBwVSzj?si=4hr_Mj8dT-2ohsnLYFjn4Q)
 * [S3RL](https://open.spotify.com/artist/11aa081aKYUzmeFm0yHdT2?si=968474d94bbd4221)
 * [SASAKURE.uk](https://open.spotify.com/artist/6nqR1MdjPNXu5KSdeqJBI1?si=499b83713b424018)
-* [SOOOO](https://open.spotify.com/artist/59TISvIGG8NmedxlcEYSWu?si=5a28f2f79a3e4a73)
 * [Silentroom](https://open.spotify.com/artist/7LLBCtTpnXXkY6AvW0Qjy9?si=076ab01ab3ba42c8)
+* [SOOOO](https://open.spotify.com/artist/59TISvIGG8NmedxlcEYSWu?si=5a28f2f79a3e4a73)
 * [Sota Fujimori](https://open.spotify.com/artist/0IhucRUI5QnAsHmw3G9I9v?si=5397224a698948d6)
 * [Srav3R](https://open.spotify.com/artist/5doDHBkL33VHZXcqAuQBj0?si=fc0fb5fabfef4657)
-* TAG
+* [TAG
 * [Taishi](https://open.spotify.com/artist/5cv7w3Fjid2lE7Srf7b2hT?si=b14eb2518d9240d0)
 * [Takeaki Wada](https://open.spotify.com/artist/1KrYz7M24ir3cJGcDYMyyu?si=7b79286ea4f84172) | [KurageP](https://open.spotify.com/artist/1GxBZsRNgsxf88VxjAVuKU?si=416944186fde4824)
 * [TANUKI](https://open.spotify.com/artist/5n3X0T0RlvRxUR6l9dBwB8?si=485a6ee8e8814976) eristocrates here, my bias compells me to suggest his [old jcore remix album](https://tanukimusic.bandcamp.com/album/old-j-core-remixes-10-14), it's so fucking good
-* [TORIENA](https://open.spotify.com/artist/569Tg9s0Rv7EpI7zufTs2i?si=25d36ee2030c41dc)
+* [tatsh](https://open.spotify.com/artist/3qQ77y3zH3qIjq38LfxQ8c?si=poUdyHBmTqiEctq4SOzKvA)
 * [Team Grimoire](https://open.spotify.com/artist/3JL2xJoZQDP7NjNiEmVpfa?si=1a3f867513644b1a)
 * [Thaehan](https://open.spotify.com/artist/2n0sjgdrfHYJT6B39cdvWW?si=945f9719e3f949c1)
-* [USAO](https://open.spotify.com/artist/25iPl8VJFDu38JMFF6uMXI?si=396ed66bf7a146a8)
+* [TORIENA](https://open.spotify.com/artist/569Tg9s0Rv7EpI7zufTs2i?si=25d36ee2030c41dc)
 * [Umeboshi chazuke](https://open.spotify.com/artist/73m2j87v34bHHXTu55XatF?si=1523b3507c944f45)
+* [USAO](https://open.spotify.com/artist/25iPl8VJFDu38JMFF6uMXI?si=396ed66bf7a146a8)
 * [Xystran](https://open.spotify.com/artist/7wBN9cf6RvHPfryy3A3Ikz?si=sMCc_FoeTXWSgQYsThcE3Q)
+* [Yooh](https://open.spotify.com/artist/1M3Nrg5KLgJTxCbwQYl0sG?si=77f29da0eeb642e4)
+* [YUC'e](https://open.spotify.com/artist/0jP8a2o9Mw5qYoUz1SnQ2A?si=2bf0141b255e48b2)
+* [Yunomi](https://open.spotify.com/artist/2j00CVYTPx6q9ANbmB2keb?si=4dd1216de9da4a55)
 * [Yuyoyuppe](https://open.spotify.com/artist/43SpPuptZj45KCN2EHWHDW?si=b36e267367954c61)
 * [Zekk](https://open.spotify.com/artist/6ImFfiM17Sg4T56akzOnu1?si=5f062aad02cc4e11)
-* [cosMo@Bousou-P](https://open.spotify.com/artist/0Z0BaBPSkr05iFPTrZmJiK?si=513834da343a4008)
-* [ebimayo](https://open.spotify.com/artist/2ndMGABYRfVaeWkDP5Ag6v?si=24b76c8015e94bc5)
-* [hino isuka](https://open.spotify.com/artist/1lnzTELNsWBahibN86sSU4?si=0437af3ed63a4f94)
-* [Imperial Circus Dead Decadence](https://open.spotify.com/artist/5bgW1AysTzHav20snaPkyp?si=8108bdcabcb84d58)
-* [kors k](https://open.spotify.com/artist/667AP6niAXUnJkkum46TvZ?si=08332aa5674e4aa8)
-* [m1dlet](https://open.spotify.com/artist/1YGGaZxHAKqyI1Knqq5mFQ?si=8cef5a281f864bb6)
-* [nora2r](https://open.spotify.com/artist/2w6fOiIppkVrA659vJN89h?si=6838076a37eb42b9)
-* [tatsh](https://open.spotify.com/artist/3qQ77y3zH3qIjq38LfxQ8c?si=poUdyHBmTqiEctq4SOzKvA)
-* [witch's slave](https://open.spotify.com/artist/6f1BHHPw92Pvr0N4tviEMT?si=c89b6d0418b740bf)
-* [YUC'e](https://open.spotify.com/artist/0jP8a2o9Mw5qYoUz1SnQ2A?si=2bf0141b255e48b2)
-* [Yooh](https://open.spotify.com/artist/1M3Nrg5KLgJTxCbwQYl0sG?si=77f29da0eeb642e4)
-* [Yunomi](https://open.spotify.com/artist/2j00CVYTPx6q9ANbmB2keb?si=4dd1216de9da4a55)
 * [ZUNTATA](https://open.spotify.com/artist/78dDLIBQRjfGrwWHPzyGvk?si=09652e6e1f59418d)
