--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -6,7 +6,7 @@
 * [Antenna Girl](https://open.spotify.com/artist/36ChDjtYousECVnTj0ntdj?si=885050507f1742f8)
 * [Aoi](https://open.spotify.com/artist/1y2oGiyZOz7JX1aEGGsYay?si=fGYIOS03R-CahTfYHVmP1w)
 * [AOiRO_Manbow aka HAPI](https://www.youtube.com/channel/UCTPCEd69AgcOaQ5N11v2zVA)
-* [ARM
+* ARM
 * [BlackY](https://open.spotify.com/artist/4IsgVdOy2TTOTPArjMzDNp?si=e5e602de051940af)
 * [C-Show](https://open.spotify.com/artist/1htzq7aFGxiKmAwVSmk4yx?si=2ff1e7008c374473)
 * [Chroma | 黒魔/](https://open.spotify.com/artist/2Gtmf2gf0Rs6NN2RTld3O2?si=e9d910e4ea6a4e54)
@@ -29,7 +29,7 @@
 * [FREEZER](https://open.spotify.com/artist/67BCC33Zamb5TdL6di2xi1?si=0547e930d8264e8d)
 * [Getty](https://open.spotify.com/artist/3CKAJHc0KjoFAbaqvvJ5kK?si=59a837b632ef4f6d)
 * [Ginkiha](https://open.spotify.com/artist/0Vqx5xQshGuOoA9JAYDhF2?si=888030bbf1e9462d)
-* [gmtn.](https://open.spotify.com/artist/510FdyxWVl8Bw83dYoDsX6?si=WIKIcg7mTlCqzypV-malvQ) | witch's slave](https://open.spotify.com/artist/6f1BHHPw92Pvr0N4tviEMT?si=c89b6d0418b740bf)
+* [gmtn.](https://open.spotify.com/artist/510FdyxWVl8Bw83dYoDsX6?si=WIKIcg7mTlCqzypV-malvQ) | [witch's slave](https://open.spotify.com/artist/6f1BHHPw92Pvr0N4tviEMT?si=c89b6d0418b740bf)
 * [Goreshit](https://open.spotify.com/artist/2UyOnfaE8nWXKPwYQyp2La?si=6e09afbac3d04901)
 * [Halozy](https://halozy.bandcamp.com/)
 * [hino isuka](https://open.spotify.com/artist/1lnzTELNsWBahibN86sSU4?si=0437af3ed63a4f94)
@@ -53,7 +53,7 @@
 * [nora2r](https://open.spotify.com/artist/2w6fOiIppkVrA659vJN89h?si=6838076a37eb42b9)
 * [owl*tree](https://open.spotify.com/artist/3Mws7pLUcCq69go78heq9p?si=b534a899be7d434c)
 * [P*Light](https://open.spotify.com/artist/7A5iW5McqgmSz4uV12zw5J?si=efdde292919f4dfa)
-* [PON
+* PON
 * [PSYQUI](https://open.spotify.com/artist/3p8H8HTn04KXh2NRzhKScl?si=5c1b517617cf45a4)
 * [Quick Brown Fox](https://open.spotify.com/artist/5dp0fbyRSD22XTvsdeLeaY?si=6ce8025cf3cb445e)
 * [RD-Sounds](https://open.spotify.com/artist/1Y4p4gln4fqE3LKdkzOz0f?si=6b5ffe6e98774967) | [凋叶棕](https://open.spotify.com/artist/1eavaF4JYVytwilMtljNhO?si=ncQTjs8mRayHcvelzKNGGw)
