adjusted naoyuki sato alias

--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -48,7 +48,7 @@
 * [Morimori Atushi](https://open.spotify.com/artist/3EhfoUSyEJ3yEVzSU7LBNe?si=824100d1dc8d449e)
 * [Myosuke](https://open.spotify.com/artist/0GsEX8wr2fhu19PIwQh1oG?si=9431244a392446c5)
 * [Nanawoakari](https://open.spotify.com/artist/06jSjpC81wzjoUoE61Fhdn?si=eda0c00ffce24608)
-* [Naoyuki Sato  (猫叉Master)](https://remywiki.com/Naoyuki_Sato)
+* [Naoyuki Sato  | 猫叉Master](https://remywiki.com/Naoyuki_Sato)
 * [Neko Hacker](https://open.spotify.com/artist/2aQ9IoRPwXEhhBVj4wbS46?si=d6dc0675b3204162)
 * [nora2r](https://open.spotify.com/artist/2w6fOiIppkVrA659vJN89h?si=6838076a37eb42b9)
 * [owl*tree](https://open.spotify.com/artist/3Mws7pLUcCq69go78heq9p?si=b534a899be7d434c)
