--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -68,7 +68,7 @@
 * [SOOOO](https://open.spotify.com/artist/59TISvIGG8NmedxlcEYSWu?si=5a28f2f79a3e4a73)
 * [Sota Fujimori](https://open.spotify.com/artist/0IhucRUI5QnAsHmw3G9I9v?si=5397224a698948d6)
 * [Srav3R](https://open.spotify.com/artist/5doDHBkL33VHZXcqAuQBj0?si=fc0fb5fabfef4657)
-* [TAG
+* TAG
 * [Taishi](https://open.spotify.com/artist/5cv7w3Fjid2lE7Srf7b2hT?si=b14eb2518d9240d0)
 * [Takeaki Wada](https://open.spotify.com/artist/1KrYz7M24ir3cJGcDYMyyu?si=7b79286ea4f84172) | [KurageP](https://open.spotify.com/artist/1GxBZsRNgsxf88VxjAVuKU?si=416944186fde4824)
 * [TANUKI](https://open.spotify.com/artist/5n3X0T0RlvRxUR6l9dBwB8?si=485a6ee8e8814976) eristocrates here, my bias compells me to suggest his [old jcore remix album](https://tanukimusic.bandcamp.com/album/old-j-core-remixes-10-14), it's so fucking good
