--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -35,7 +35,7 @@
 * [hino isuka](https://open.spotify.com/artist/1lnzTELNsWBahibN86sSU4?si=0437af3ed63a4f94)
 * [Imperial Circus Dead Decadence](https://open.spotify.com/artist/5bgW1AysTzHav20snaPkyp?si=8108bdcabcb84d58)
 * [IOSYS](https://open.spotify.com/artist/7lw3txgTpihF2On2QVtldq?si=40acaa5f88074f1a)
-* [Katagiri](https://open.spotify.com/artist/5duYVbF1t32VmVaI33fYAS?si=RvHPcqNpTFygvk0kxzqHlQ)
+* [Katagiri | かたぎり](https://open.spotify.com/artist/5duYVbF1t32VmVaI33fYAS?si=RvHPcqNpTFygvk0kxzqHlQ)
 * [Kobaryo](https://open.spotify.com/artist/1Y81Ch90opScfpMfN17lZb?si=0ccf19138e1c4627)
 * [kors k](https://open.spotify.com/artist/667AP6niAXUnJkkum46TvZ?si=08332aa5674e4aa8)
 * [Kurokotei | 黒皇帝](https://open.spotify.com/artist/3AjRXPf1FkulZmsWdOYBf5?si=05c12cd4a14b479f)
