--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -78,6 +78,7 @@
 * [TORIENA](https://open.spotify.com/artist/569Tg9s0Rv7EpI7zufTs2i?si=25d36ee2030c41dc)
 * [Umeboshi chazuke](https://open.spotify.com/artist/73m2j87v34bHHXTu55XatF?si=1523b3507c944f45)
 * [USAO](https://open.spotify.com/artist/25iPl8VJFDu38JMFF6uMXI?si=396ed66bf7a146a8)
+* [wowaka](https://open.spotify.com/artist/65MYE6R7PCyVAhHrQploNT?si=ab3f202bc9cc41c7)
 * [Xystran](https://open.spotify.com/artist/7wBN9cf6RvHPfryy3A3Ikz?si=sMCc_FoeTXWSgQYsThcE3Q)
 * [Yooh](https://open.spotify.com/artist/1M3Nrg5KLgJTxCbwQYl0sG?si=77f29da0eeb642e4)
 * [YUC'e](https://open.spotify.com/artist/0jP8a2o9Mw5qYoUz1SnQ2A?si=2bf0141b255e48b2)
