added ikaruga_nex & jun wakita
https://discord.com/channels/879470867137048616/904507032470708305/911438952983044097
https://discord.com/channels/879470867137048616/904507032470708305/911654541815074856

--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -33,8 +33,10 @@
 * [Goreshit](https://open.spotify.com/artist/2UyOnfaE8nWXKPwYQyp2La?si=6e09afbac3d04901)
 * [Halozy](https://halozy.bandcamp.com/)
 * [hino isuka](https://open.spotify.com/artist/1lnzTELNsWBahibN86sSU4?si=0437af3ed63a4f94)
+* [ikaruga_nex](https://open.spotify.com/artist/7APbCMokJLK8dQjm2fK6Vp?si=1f67dbe009ab42e0)
 * [Imperial Circus Dead Decadence](https://open.spotify.com/artist/5bgW1AysTzHav20snaPkyp?si=8108bdcabcb84d58)
 * [IOSYS](https://open.spotify.com/artist/7lw3txgTpihF2On2QVtldq?si=40acaa5f88074f1a)
+* [Jun Wakita](https://open.spotify.com/artist/4GnlUQF9clWmZJXSCRXHJF?si=1bguGty9STm2S3Ijga280g)
 * [Katagiri | かたぎり](https://open.spotify.com/artist/5duYVbF1t32VmVaI33fYAS?si=RvHPcqNpTFygvk0kxzqHlQ)
 * [Kobaryo](https://open.spotify.com/artist/1Y81Ch90opScfpMfN17lZb?si=0ccf19138e1c4627)
 * [kors k](https://open.spotify.com/artist/667AP6niAXUnJkkum46TvZ?si=08332aa5674e4aa8)
