Fixed Thaehan pic

--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -86,7 +86,7 @@
 (eristocrates here, my bias compells me to suggest TANUKI's [old jcore remix album](https://tanukimusic.bandcamp.com/album/old-j-core-remixes-10-14), it's so fucking good)
 <img src="https://remywiki.com/images/1/1c/Tatsh.jpg" height="200"/> [Tatsuya Shimizu | tatsh](https://open.spotify.com/artist/3qQ77y3zH3qIjq38LfxQ8c?si=poUdyHBmTqiEctq4SOzKvA)
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWkwH8k95ceZkfkt6xZV_6DQaEVrDPMYB6dzudeItRVruNVMY&s" height="200"/> [Team Grimoire](https://open.spotify.com/artist/3JL2xJoZQDP7NjNiEmVpfa?si=1a3f867513644b1a)
-<img src="https://lh3.googleusercontent.com/proxy/wU_DG1pMxFM7mlye0oE0zzp6iDvICtNXt8PN0ME3PEjmom_vp29OmzN38rZ36ZRnFfOTvSKWBr7FynkLI9XsjllhHXYgIZqPsR2W-LMuefJWYCWhPoZ5svtOK0er1XjHnA" height="200"/> [Thaehan](https://open.spotify.com/artist/2n0sjgdrfHYJT6B39cdvWW?si=945f9719e3f949c1)
+<img src="https://i1.sndcdn.com/avatars-9nQGGew4x3jcZU7k-aBBj0A-t500x500.jpg" height="200"/> [Thaehan](https://open.spotify.com/artist/2n0sjgdrfHYJT6B39cdvWW?si=945f9719e3f949c1)
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRL7Vs3Nrl1yLNJs0x22Yr20Xb_4AjmaF8txtxfn3vtRzHzDFqN&s" height="200"/> [TORIENA](https://open.spotify.com/artist/569Tg9s0Rv7EpI7zufTs2i?si=25d36ee2030c41dc)
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQiE5ByLgYkcM6WRC6NLnLDNZT7jDXrVPALyCQXtzh5KjxeHec&s" height="200"/> [Umeboshi chazuke](https://open.spotify.com/artist/73m2j87v34bHHXTu55XatF?si=1523b3507c944f45)
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWQWS2hibslmwpARokKJRozF98sRVcnui9TpbDFBud5cBp7WIX&s" height="200"/> [USAO](https://open.spotify.com/artist/25iPl8VJFDu38JMFF6uMXI?si=396ed66bf7a146a8)
