updated HAPI's liink to spotify

--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -31,7 +31,7 @@
 
 <img src="https://img.discogs.com/zHnJyfU-bYIGPaXcCggMOu17cyw=/fit-in/300x300/filters:strip_icc():format(jpeg):mode_rgb():quality(40)/discogs-images/A-1030668-1578524463-9194.png.jpg" height="200"/>
 
- [AOiRO_Manbow aka HAPI](https://www.youtube.com/channel/UCTPCEd69AgcOaQ5N11v2zVA)
+ [AOiRO_Manbow aka HAPI](https://open.spotify.com/artist/6rfgYxT7DtOiLwmRPUMVVX?si=wQfXYMlGQHGkpbHWw6b2nA)
 
 <img src="https://lastfm.freetls.fastly.net/i/u/300x300/20b4be54b33f4c6291a5155dbde6661c" height="200"/>
 
