fixed aaaa link

--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -15,7 +15,7 @@
 
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqdZi4L0ovL7x4FG0eaz9XlWkkwLpLHb0hCF2H_oOsccuLQbo&s" height="200"/>
 
- [aaaa | ああああ](https://open.spotify.com/artist/54XLXnnCDMzhExXXXKWNib?si=c01d2dff23ef4b66)
+ [aaaa | ああああ](https://open.spotify.com/artist/6NVMzVjhJiHrjpx6yyNQ5i?si=bRSfhQ9QTMqVjH9t7E1OAQ)
 
 <img src="https://i1.sndcdn.com/avatars-a0qrFUdHeMTaKIwg-H2jXkw-t500x500.jpg" height="200"/>
 
