Fix to alpha sort
my stupid ass forgot how to add to the list properly smh

--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -52,12 +52,12 @@
 <img src="https://i.scdn.co/image/ab67616d0000b2731e604f5dfd7e0ab3cef62bed" height="200"/>
 
  [cosMo@Bousou-P](https://open.spotify.com/artist/0Z0BaBPSkr05iFPTrZmJiK?si=513834da343a4008)
+ 
+ <img src="https://i1.sndcdn.com/avatars-ufGSk2O9XMDBcadP-AJz3BA-t500x500.jpg" height="200"/>
+
+  [Cres.](https://cresdot.bandcamp.com/)
 
 <img src="https://remywiki.com/images/thumb/d/dc/Daichi_Watanabe.jpg/400px-Daichi_Watanabe.jpg" height="200"/>
-
- [Cres.](https://cresdot.bandcamp.com/)
-
-<img src="https://i1.sndcdn.com/avatars-ufGSk2O9XMDBcadP-AJz3BA-t500x500.jpg" height="200"/>
 
  [Daichi Watanabe | PON](https://open.spotify.com/artist/3XvevJ2QFlVuiBazyJI21X?si=a1689f1311124eaa)
 
@@ -92,10 +92,14 @@
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRg-JC0zYWqTBwnC9GRyf2wyZzo9jG8J0C4QtZCIUdDqW8FyzM4&s" height="200"/>
 
  [DJ sharpnel](https://open.spotify.com/artist/0qZjgKADg863aWQZxRppgK?si=eZmwhxuJRFGNnFASTfd-Tw)
+ 
+<img src="https://i1.sndcdn.com/avatars-000206428108-v5spxk-t500x500.jpg" height="200"/>
+
+[dj TAKA](https://www.youtube.com/watch?v=pt8YcXIvhN0&list=PLAF5EH2oAVp_X9qg_Z3ZZdYGC4ADEvqGE)
 
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSLs_vvOnTBQl-nr1iWpA1VvHCOKMzNjskOyOroiRjBoAtT8G8&s" height="200"/>
 
- [DJ YOSHITAKA | DJ TAKA](https://open.spotify.com/artist/7MrwZGvkQjFALsvKQyBbli?si=9a64c3770bdd4c42)
+ [DJ YOSHITAKA](https://open.spotify.com/artist/7MrwZGvkQjFALsvKQyBbli?si=9a64c3770bdd4c42)
 
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvhPoiKCHUcEpGBRyS2Fz5S9O2oXiRiGDZtqgYqKyYQMRLTCJD&s" height="200"/>
 
@@ -176,12 +180,12 @@
 <img src="https://i1.sndcdn.com/avatars-000003485374-3soicj-t500x500.jpg" height="200"/>
 
  [Junk](https://open.spotify.com/artist/5tR5EAVOTNLdRojz8WkcQx?si=kNEJAUNESD24GkNiKEuM4w)
-
-<img src="https://i1.sndcdn.com/avatars-QAExvuf5OskKPAyx-752uzA-t200x200.jpg" height="200"/>
-
- [kamome sano](https://open.spotify.com/artist/0XraR5DqW6Vpp86omsB88K?si=4ULKXJ-TRjiBMIKKw28nIg)
-
+ 
 <img src="https://i.scdn.co/image/ab6761610000e5eba8d78690fb82a96e6ab0fa5f" height="200"/>
+
+  [kamome sano](https://open.spotify.com/artist/0XraR5DqW6Vpp86omsB88K?si=4ULKXJ-TRjiBMIKKw28nIg)
+  
+<img src="https://i1.sndcdn.com/avatars-QAExvuf5OskKPAyx-752uzA-t200x200.jpg" height="200"/>
 
  [Katagiri | かたぎり](https://soundcloud.com/katagiri)
 
@@ -200,12 +204,12 @@
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQov9A-ei4HO49-WERC4pQI45g3wk2rJQMrUg75WG1rEyOUeCK1&s" height="200"/>
 
  [Laur](https://open.spotify.com/artist/5fxJUmn4RTMzD0XPkTUpK3?si=f5a07b81face4192)
-
-<img src="https://remywiki.com/images/thumb/c/c6/WeareLSM.jpg/400px-WeareLSM.jpg" height="200"/>
+ 
+ <img src="https://i1.sndcdn.com/artworks-pxkGp8uCFakEzxkX-06SvVA-t240x240.jpg" height="200"/>
 
 [linear ring](https://open.spotify.com/artist/4U5rC3U2RBk7eZ3Ibj4RJx?si=qO6QWL3aTcW5BU2NwquIhg)
 
-<img src="https://i1.sndcdn.com/artworks-pxkGp8uCFakEzxkX-06SvVA-t240x240.jpg" height="200"/>
+<img src="https://remywiki.com/images/thumb/c/c6/WeareLSM.jpg/400px-WeareLSM.jpg" height="200"/>
 
  [Lite Show Magic](https://open.spotify.com/artist/7hlPJUqB3Wkpr5WLHLC573?si=14a0fc4d751f47e3)
 
@@ -244,16 +248,16 @@
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzUDjJ0bdnaH1SaGc1gEB5cQqyngPy7_jyOFfYPi2kpfvQiyBL&s" height="200"/>
 
  [Neko Hacker](https://open.spotify.com/artist/2aQ9IoRPwXEhhBVj4wbS46?si=d6dc0675b3204162)
-
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGldagux1BhFussvhOKCYfETDc58iycNHb6gJ86SmVLDh0nr4P&s" height="200"/>
+ 
+<img src="https://i1.sndcdn.com/avatars-000462179517-qv0rw9-t240x240.jpg" height="200"/>
 
  [NIWASHI](https://open.spotify.com/artist/0Dozzj7Q5lefWX5aUkyvow?si=ByRGP-U1R2KbwWDrD_RBzQ)
-
-<img src="https://i1.sndcdn.com/avatars-000462179517-qv0rw9-t240x240.jpg" height="200"/>
+ 
+ <img src="https://i1.sndcdn.com/avatars-C23Gp3KkkmbPr0ob-QrLyUw-t500x500.jpg" height="200"/>
 
 [Nizikawa](https://open.spotify.com/artist/3xMDrBATQJ0FPwdZPb9If5?si=OUFNp9bJT9SC_bmEhe2AXQ)
 
-<img src="https://i1.sndcdn.com/avatars-C23Gp3KkkmbPr0ob-QrLyUw-t500x500.jpg" height="200"/>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGldagux1BhFussvhOKCYfETDc58iycNHb6gJ86SmVLDh0nr4P&s" height="200"/>
 
  [nora2r](https://open.spotify.com/artist/2w6fOiIppkVrA659vJN89h?si=6838076a37eb42b9)
 
@@ -308,13 +312,13 @@
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS969ZbhHiamRTFQ0O6L8-bYsIjgo8EXr6KKAQxN32lJKtyhg_3&s" height="200"/>
 
  [Silentroom](https://open.spotify.com/artist/7LLBCtTpnXXkY6AvW0Qjy9?si=076ab01ab3ba42c8)
-
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbq1VoJI-WcvXRZkL3cL-aV5hcwkbIzZkg3CJzV3agwZOYKr4&s" height="200"/>
-
-[Siromaru](https://open.spotify.com/artist/40YuVGSqlU2G5vf7xBU63U?si=6cf9cc3eadef4b50)
-
+ 
 <img src="https://i.scdn.co/image/ab67616d0000b273ea0b58da378745b5be4be9ca" height="200"/>
 
+ [Siromaru](https://open.spotify.com/artist/40YuVGSqlU2G5vf7xBU63U?si=6cf9cc3eadef4b50)
+
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbq1VoJI-WcvXRZkL3cL-aV5hcwkbIzZkg3CJzV3agwZOYKr4&s" height="200"/>
+ 
  [SOOOO](https://open.spotify.com/artist/59TISvIGG8NmedxlcEYSWu?si=5a28f2f79a3e4a73)
 
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRnsZZSVnwcLysIog2w7MOa3lWLoH2x3y0WItsP_0uqYf5oUMfN&s" height="200"/>
