add rinni vids section and remove artists done

--- a/hgra-artist-request.mkd
+++ b/hgra-artist-request.mkd
@@ -257,14 +257,6 @@ suggested by Clo4cky
 
  [Ginkiha](https://open.spotify.com/artist/0Vqx5xQshGuOoA9JAYDhF2?si=888030bbf1e9462d)
 
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyefoJeUxTjXvUwIa1fcOdIFjMRJK2HnmMT1GSc9JTdtgaaJk&s" height="200"/>
-
- [gmtn. | ](https://open.spotify.com/artist/510FdyxWVl8Bw83dYoDsX6?si=WIKIcg7mTlCqzypV-malvQ)
-
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStq43Kv4Y7l78L-2gmXWHgs_K5x44qw2HfilohbORkrlrkDyc&s" height="200"/>
-
- [witch's slave](https://open.spotify.com/artist/6f1BHHPw92Pvr0N4tviEMT?si=c89b6d0418b740bf)
-
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROVRWB6_jncQ_C-GpKvIumnQY6uVoi2fvOM66jcdvNcj503Xqs&s" height="200"/>
 
  [Goreshit](https://open.spotify.com/artist/2UyOnfaE8nWXKPwYQyp2La?si=6e09afbac3d04901)
@@ -389,14 +381,6 @@ suggested by Yume Gabbi
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTuwuRz-V_9b-EUzwz-uz1mA0KfuxSUgTCUnNwMGsVTy43ph4ad&s" height="200"/>
 
  [Kurokotei | 黒皇帝](https://soundcloud.com/dialgadu77)
-
-<img src="https://remywiki.com/images/5/52/Lapix.png" height="200"/>
-
-  [Lapix](https://open.spotify.com/artist/5fIZxtu9KYwRi3MnLEVLCC)
-
-<!---
-suggested by Silocity
--->
 
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQov9A-ei4HO49-WERC4pQI45g3wk2rJQMrUg75WG1rEyOUeCK1&s" height="200"/>
 
@@ -631,9 +615,6 @@ suggested by idk_anymore
 suggested by gentu
 -->
 
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS969ZbhHiamRTFQ0O6L8-bYsIjgo8EXr6KKAQxN32lJKtyhg_3&s" height="200"/>
-
- [Silentroom](https://open.spotify.com/artist/7LLBCtTpnXXkY6AvW0Qjy9?si=076ab01ab3ba42c8)
  
 <img src="https://i.scdn.co/image/ab67616d0000b273ea0b58da378745b5be4be9ca" height="200"/>
 
@@ -743,3 +724,62 @@ suggested by MLZR
 
  [Zekk](https://open.spotify.com/artist/6ImFfiM17Sg4T56akzOnu1?si=5f062aad02cc4e11)  
 (eristocrates here, my bias compells me to suggest TANUKI's [old jcore remix album](https://tanukimusic.bandcamp.com/album/old-j-core-remixes-10-14), it's so fucking good)
+
+# Rinni vids!
+in order of creation
+The image is the link to the video
+
+<!---
+template
+[<img src="" height="200"/>]()
+
+  []()
+-->
+
+[<img src="https://pbs.twimg.com/profile_images/1386588354678902786/h9BN2z3Z_400x400.jpg" height="200"/>](https://www.youtube.com/watch?v=2vTM_aXC8bY)
+
+  [t+pazolite](https://open.spotify.com/artist/4Y345wfGiorcB2NXcsJxOt)
+
+[<img src="https://e.snmc.io/i/1200/s/9740b981408bf69fb61cf129da90a69b/4989971" height="200"/>](https://www.youtube.com/watch?v=4pXIWVMt86A)
+
+  [XI](https://open.spotify.com/artist/0bwKEOznEbnmCK85SPEYuK)
+
+[<img src="https://i.scdn.co/image/ab67616d0000b273cc74c8d53fb88f5e1fcc1f89" height="200"/>](https://www.youtube.com/watch?v=xQrYq-3Eb3U)
+
+  [Sakuzyo](https://open.spotify.com/artist/53BVcGSlpWPF7iYsSN0Oe1)
+
+[<img src="https://remywiki.com/images/5/52/Lapix.png" height="200"/>](https://www.youtube.com/watch?v=zvikZE5F1E8)
+
+  [lapix](https://open.spotify.com/artist/5fIZxtu9KYwRi3MnLEVLCC)
+
+[<img src="https://i.scdn.co/image/ab67616d0000b273702d3fbf9497db3b672fc752" height="200"/>](https://www.youtube.com/watch?v=b-uNxMyheig)
+
+  [LeaF](https://open.spotify.com/artist/4nxiPL9AVYybdRgnEvT6Pp)
+
+[<img src="https://i1.sndcdn.com/avatars-000569281377-5d93mq-t500x500.jpg" height="200"/>](https://www.youtube.com/watch?v=moYoJWf9sIg)
+
+  [Frums](https://open.spotify.com/artist/7zEXEfruds9B2DNYZjg5e2)
+
+[<img src="https://yt3.ggpht.com/93qHwkbakpxUYdG4fwiz1JhJ1DalaGzped2JUo5MMpmkNNT1OvUMxfR_kwe3AKO_BKrC4mH55w=s900-c-k-c0x00ffffff-no-rj" height="200"/>](https://www.youtube.com/watch?v=LH3oCL3go0U)
+
+  [Nanahira](https://open.spotify.com/artist/0bkkiFN0ghGl4j9aLi3oQx)
+
+[<img src="https://yt3.ggpht.com/pqEhhuy9Hy0WF-3yikE4KERGjfTIUvyEBfxZOeCFmJ4ZhDrmQ0pQ4Fk-FC3O48MXXmfPyoMmJA=s900-c-k-c0x00ffffff-no-rj" height="200"/>]()
+
+  [Camellia](https://open.spotify.com/artist/4bwIf0yXJf0F9AmOl2J78M)
+
+[<img src="https://remywiki.com/images/e/e7/Naoki.jpg" height="200"/>](https://www.youtube.com/watch?v=K8qDcebCKiM)
+
+  [Naoki Maeda](https://open.spotify.com/artist/0Y0sqHmyHC0lDbyRnsjkcX)
+
+[<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyefoJeUxTjXvUwIa1fcOdIFjMRJK2HnmMT1GSc9JTdtgaaJk&s" height="200"/>](https://www.youtube.com/watch?v=ouEewGXG0Kk)
+
+  [gmtn. | ](https://open.spotify.com/artist/510FdyxWVl8Bw83dYoDsX6?si=WIKIcg7mTlCqzypV-malvQ)
+
+[<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStq43Kv4Y7l78L-2gmXWHgs_K5x44qw2HfilohbORkrlrkDyc&s" height="200"/>](https://www.youtube.com/watch?v=ouEewGXG0Kk)
+
+  [witch's slave](https://open.spotify.com/artist/6f1BHHPw92Pvr0N4tviEMT?si=c89b6d0418b740bf)
+
+[<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS969ZbhHiamRTFQ0O6L8-bYsIjgo8EXr6KKAQxN32lJKtyhg_3&s" height="200"/>](https://www.youtube.com/watch?v=Th-c6okksMU)
+
+ [Silentroom](https://open.spotify.com/artist/7LLBCtTpnXXkY6AvW0Qjy9?si=076ab01ab3ba42c8)
